# Jobs-QA

./: .gitignore  .pre-commit-config.yaml  README.md  agent_api.py  api.py  app.py  main.py  misc.py  parse_api.py  pyproject.toml  requirements.txt  tox.ini  tuyendung_scraping.py  utils.py
.github/workflows/: ci.yml
config/: scraper_config.yml
configs/: logger_config.yml  scraper_config.yml
documents/: jobs_posted_v1.csv
experimental/: check_engine.py  delete_astradb.py  langchain_exp.py  llama_index_csv.py  llama_index_pdf.py  llama_index_unstructured_loader.py  react_llama-index_test.ipynb  react_llama-index_test.py
experimental/table/: llama_index_csv_index.py  llama_index_sql_query.py  llama_index_sql_with_index.py
legacy/: agent_v1.py  main_v1.py  parse_api.py  react_agent.py
scripts/: api.sh  api_agent.sh  api_chat.sh  app.sh  table_query.sh
src/: chat.py  index_retriever.py  llama_index_agent.py  react_agent.py  sql_vector_query_engine.py  table_factory.py  table_query.py
src/agent/: __init__.py  base_agent.py  tool_agent.py
src/database/: __init__.py  base_database.py  qdrant.py
src/engine/: __init__.py  base_engine.py  base_factory.py  table_engine.py  table_factory.py  text_engine.py  utils.py
src/prompt/: __init__.py  query.py  sql.py  tool.py
src/reader/: __init__.py  base_reader.py  table_reader.py  text_reader.py
src/scraper/: __init__.py  base_scraper.py  job_scraper.py
src/tool/: __init__.py  tool_controller.py
src/utils/: __init__.py  api.py  app.py  debug.py  func.py  io.py  logger.py  meta.py  misc.py  text.py  wrapper.py
(+10 files in other folders)
